--- a/cars/templates/new_car.html
+++ b/cars/templates/new_car.html
@@ -1,11 +1,13 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 
 {% block content %}
-<form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    <table>
-        {{ new_car_form.as_table }}
-    </table>
-    <input type="submit" value="Cadastrar" class="btn btn-pramary"/>
-</form>
+    <form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+
+        <table>
+            {{ form.as_table }}
+        </table>
+
+        <input type="submit" value="Cadastrar" class="btn btn-primary">
+    </form>
 {% endblock %}
